# xlerobot

./: .gitignore  .gitmodules  DATA_COLLECTION_CHECKLIST.md  Makefile  README.md  pyproject.toml
config/: vr_calibration.yaml  xlerobot.yaml
config/calibration/so_follower/: left_follower_arm.json  right_follower_arm.json
docs/: calibration.md  inference.md  recording.md  setup.md  teleop.md  troubleshooting.md
scripts/: _xlerobot_loader.py  calibrate_gripper.py  diagnose_motor.py  finetune_pi05.py  flash_motor_id.py  infer_pi05_finetuned.py  lerobot_dataset_viz_main.py  push_dataset.py  run_openpi_server.sh  run_pi05_inference.py  run_vr_teleop_capture.py  save_home_pose.py  setup_xlerobot.sh  sync_calibration.py  test_gripper.py
webapp/backend/: api.py  app.py  cameras.py  dataset.py  doctor.py  home.py  motors.py  test_vr_recording.py  vr_calibration.py  vr_teleop.py
webapp/backend/static/: index.html
webapp/backend/static/assets/: index-Cpjfsw_N.js  index-DtVudJxt.js  index-oYg9NKoV.css
webapp/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webapp/frontend/src/: App.tsx  api.ts  main.tsx  styles.css
webapp/frontend/src/pages/: Cameras.tsx  Dashboard.tsx  VRTeleop.tsx
